worked on toggling the form and localstorage

--- a/src/output.css
+++ b/src/output.css
@@ -155,4 +155,11 @@
     display: none !important;
   }
 }
-@layer utilities;
+@layer utilities {
+  .hidden {
+    display: none;
+  }
+}
+.hidden {
+  display: none;
+}
